--- a/src/content/posts/translations/acoup-archery-distance-and-kiting.mdx
+++ b/src/content/posts/translations/acoup-archery-distance-and-kiting.mdx
@@ -68,7 +68,7 @@ author: Bret Devereaux
 Мы можем представить это в виде диаграммы энергий, необходимых для того, чтобы иметь шанс разрушить доспех. Обратите внимание, что для того, чтобы действительно убить человека, удар должен значительно превысить эти энергии, возможно, на 10-30 Дж.
 
 ![](/images/archery-distance-and-kiting-3.jpg)
-Сине-красные полосы представляют собой энергетические зоны, где пробитие возможно, но не гарантировано (в зависимости от качества доспехов и т. д.). Оговорки: Это следует из Williams (2003). Здесь "железо" соответствует *-доспехам Уильямса (2003) (0% углерода, 3-4% шлака); "сталь" - его ***-доспехам (0,6% углерода,меньше 1% шлака). Помните, что доспех состоит из слоев - почта надевается поверх гамбезона, а не сама по себе (обычно)!
+Сине-красные полосы представляют собой энергетические зоны, где пробитие возможно, но не гарантировано (в зависимости от качества доспехов и т. д.). Оговорки: Это следует из Williams (2003). Здесь "железо" соответствует *-доспехам Уильямса (2003) (0% углерода, 3-4% шлака); "сталь" - его ***-доспехам (0,6% углерода,меньше 1% шлака). Помните, что доспех состоит из слоев - кольчуга надевается поверх гамбезона, а не сама по себе (обычно)!
 
 Оценки энергии выстрела самых мощных луков значительно отличаются. Большинство известных мне исследований было проведено на примере английских длинных луков, но я хочу отметить, что вес и длина тяги степных композитных луков (т.е. луков гуннов, тюрков, монголов) довольно схожи, что дает им схожие (как я понимаю) характеристики дальности и мощности. Многие луки не были настолько мощными - это одни из самых мощных луков. Некоторые оценки я приведу здесь в кавычках, чтобы те, кто не хочет останавливаться на них, могли их пропустить.
 
@@ -103,13 +103,13 @@ author: Bret Devereaux
 
 Высокие углы удара очень плохо влияют на пробитие стрелы по двум причинам. Первая проблема заключается в том, что большая часть энергии движения направлена вдоль мишени, а не в нее, что означает, что стрела может проскочить, а не пробить ее. Даже если стрела "прокусит" доспех, часть энергии будет потеряна при давлении на доспех, а не при пробивании его. Вторая проблема заключается в том, что при попадании под углом стреле приходится преодолевать большее количество материала, чем при ударе в упор, что делает доспех более толстым (как наклонная броня на танке).
 
-Эти факторы сильно влияют на пробиваемость. Здесь я привожу лишь довольно упрощенную версию влияния наклонной брони (этот вопрос был рассмотрен гораздо более подробно применительно к высокоскоростным снарядам, поражающим танки). Уильямс (2003) рассматривает проблему скользящего попадания. По его оценкам, энергия поражения стальной плиты под углом 30 градусов как минимум на 20 % выше, чем при точечном попадании; под углом 45 % - на 40 % выше, поскольку стрела не передает всю свою энергию плите. Удар под углом 60 градусов требует вдвое больше энергии для пробития. Это может быть менее справедливо для доспехов, изготовленных из материалов, которые стрела может "прокусить" (таких как почта и текстиль), но часть энергии удара будет потеряна независимо от этого.
+Эти факторы сильно влияют на пробиваемость. Здесь я привожу лишь довольно упрощенную версию влияния наклонной брони (этот вопрос был рассмотрен гораздо более подробно применительно к высокоскоростным снарядам, поражающим танки). Уильямс (2003) рассматривает проблему скользящего попадания. По его оценкам, энергия поражения стальной плиты под углом 30 градусов как минимум на 20 % выше, чем при точечном попадании; под углом 45 % - на 40 % выше, поскольку стрела не передает всю свою энергию плите. Удар под углом 60 градусов требует вдвое больше энергии для пробития. Это может быть менее справедливо для доспехов, изготовленных из материалов, которые стрела может "прокусить" (таких как кольчуга и текстиль), но часть энергии удара будет потеряна независимо от этого.
 
 Но Уильямс, похоже, рассматривал только часть уравнения, связанную со стрелой - энергию, потерянную из-за того, что стрела движется не перпендикулярно доспеху. Стреле также приходится проходить через большее количество материала - металла или текстиля, - потому что доспех эффективно "наклонен" по отношению к снаряду. Это увеличивает эффективную толщину. При 30 градусах увеличение составляет 16%, при 45 градусах - 42%, при 50 градусах - 56%. Выгода от увеличения толщины не линейная, а экспоненциальная (примерно в степени 1,6), поэтому увеличение эффективной толщины может иметь огромное влияние. Разница между пластиной толщиной 1 мм и пластиной толщиной около 1,4 мм (эффективный угол удара 45 градусов) составляет не 40 %, а 75 %.
 
 ![](/images/archery-distance-and-kiting-4.jpg)
 На диаграмме показаны оба угла, которые я описываю, и то, как угол удара влияет на количество материала, через который должна пройти стрела, чтобы пробить доспех.
-Определение влияния этих факторов на почту и текстиль - сложные материалы по сравнению со стальной пластиной - вероятно, потребует множества реальных испытаний. С одной стороны, стрела может пробить кольчугу или переплетение "ткани" этих доспехов. С другой стороны, эти материалы имеют вертикальную "податливость", что может привести к поглощению энергии стрелы, так как стрела должна пробить доспех "вниз", прежде чем она сможет приложить всю силу для раскалывания колец или разрыва волокон, чтобы пробить его. В случае с почтой наконечник стрелы должен попасть в центр кольца, чтобы расколоть его, что становится гораздо менее вероятным при углах удара, удаленных от перпендикуляра.
+Определение влияния этих факторов на кольчугу и текстиль - сложные материалы по сравнению со стальной пластиной - вероятно, потребует множества реальных испытаний. С одной стороны, стрела может пробить кольчугу или переплетение "ткани" этих доспехов. С другой стороны, эти материалы имеют вертикальную "податливость", что может привести к поглощению энергии стрелы, так как стрела должна пробить доспех "вниз", прежде чем она сможет приложить всю силу для раскалывания колец или разрыва волокон, чтобы пробить его. В случае с кольчугой наконечник стрелы должен попасть в центр кольца, чтобы расколоть его, что становится гораздо менее вероятным при углах удара, удаленных от перпендикуляра.
 
 ## Быстрый итог: Проникновение на Дистанции
 Имея на руках всю эту информацию, мы можем - очень приблизительно - подумать о пробитии доспехов на Дистанции. Хочу подчеркнуть, что все это лишь прикидки на глазок; точных исследований пока не существует, так как в них участвует множество переменных (энергия высвобождения, скорость высвобождения, вес стрелы, сопротивление стрелы и т. д.). Но мы все же можем получить представление об этом вопросе.
@@ -118,11 +118,11 @@ author: Bret Devereaux
 
 Когда вы читаете это, имейте в виду, что у определенной массы лучников, скорее всего, будут луки с мощностью, распределенной в этой Дистанции. И снова мы имеем дело с облаком вероятностей, а не со строгой бинарностью.
 
-На короткой дистанции - 20 м или около того - все наши луки имеют почти полную энергию удара, а угол удара очень мал (около 2 градусов; пренебрежимо мал). На этой дистанции самый мощный длинный лук с большой вероятностью пробьет все, что угодно, кроме 1,5-миллиметровой стальной пластины с прокладками. Защита из более тонких пластин, скорее всего, будет повреждена ударом, даже если не будет пробита. Более типичный длинный лук имеет хорошие шансы поразить латный доспех с помощью хорошо нацеленного выстрела, который бьет точно в цель и может повредить защиту пластин. Самый слабый лук не сможет поразить (но может повредить) почту на этой дистанции. Наш комбинированный залп с близкого расстояния очень опасен для тех, на ком нет хорошо сделанных и толстых пластинчатых доспехов.
+На короткой дистанции - 20 м или около того - все наши луки имеют почти полную энергию удара, а угол удара очень мал (около 2 градусов; пренебрежимо мал). На этой дистанции самый мощный длинный лук с большой вероятностью пробьет все, что угодно, кроме 1,5-миллиметровой стальной пластины с прокладками. Защита из более тонких пластин, скорее всего, будет повреждена ударом, даже если не будет пробита. Более типичный длинный лук имеет хорошие шансы поразить кольчугу с помощью хорошо нацеленного выстрела, который бьет точно в цель и может повредить защиту пластин. Самый слабый лук не сможет поразить (но может повредить) кольчугу на этой дистанции. Наш комбинированный залп с близкого расстояния очень опасен для тех, на ком нет хорошо сделанных и толстых пластинчатых доспехов.
 
-На средней дистанции - 100 м - все немного иначе. Наши стрелы потеряли немного энергии (скажем, около 10%, но поскольку устойчивость ветра тем выше, чем быстрее вы идете, потеря энергии будет наиболее значительной для самого тяжелого лука), а угол их падения менее благоприятен (около 10 градусов или около того, предполагая, что наши луки могут бросать стрелы на 250 м - так что считайте, что на 10% больше защитного материала будет пробито за счет эффективного наклона). Для нашего самого мощного лука (эффективная энергия удара на этой дистанции составляет около 100 Дж) пробитие почты уже не гарантировано, но все еще вполне возможно. Для нашего типичного длинного лука (эффективная энергия удара теперь около 65 Дж) пробивание почты потребует некоторой удачи, но простые гамбезоны все равно должны быть часто пробиваемы. Для нашего самого слабого лука (эффективная энергия удара сейчас ок. 50-55 Дж) поражение хорошего толстого гамбезона - это "возможно", а все остальное - это уже точно недосягаемо. На этой дистанции хорошо бронированные пешие воины - например, в бригандине поверх кольчуги - могут продвигаться вперед с некоторой уверенностью. Однако более бедняцкие солдаты в доспехах все еще подвергаются большому риску.
+На средней дистанции - 100 м - все немного иначе. Наши стрелы потеряли немного энергии (скажем, около 10%, но поскольку устойчивость ветра тем выше, чем быстрее вы идете, потеря энергии будет наиболее значительной для самого тяжелого лука), а угол их падения менее благоприятен (около 10 градусов или около того, предполагая, что наши луки могут бросать стрелы на 250 м - так что считайте, что на 10% больше защитного материала будет пробито за счет эффективного наклона). Для нашего самого мощного лука (эффективная энергия удара на этой дистанции составляет около 100 Дж) пробитие кольчуги уже не гарантировано, но все еще вполне возможно. Для нашего типичного длинного лука (эффективная энергия удара теперь около 65 Дж) пробивание кольчуги потребует некоторой удачи, но простые гамбезоны все равно должны быть часто пробиваемы. Для нашего самого слабого лука (эффективная энергия удара сейчас ок. 50-55 Дж) поражение хорошего толстого гамбезона - это "возможно", а все остальное - это уже точно недосягаемо. На этой дистанции хорошо бронированные пешие воины - например, в бригандине поверх кольчуги - могут продвигаться вперед с некоторой уверенностью. Однако более бедняцкие солдаты в доспехах все еще подвергаются большому риску.
 
-На дальних дистанциях - 200 м - ситуация для наших лучников становится гораздо хуже. Наши стрелы потеряли еще больше энергии (общие потери составляют около 20%), а угол попадания стал гораздо менее благоприятным (почти 30 градусов). Естественный эффект наклона угла удара теперь означает, что нам приходится пробивать на 16% больше материала. Для нашего самого мощного лука (эффективная энергия удара теперь составляет всего 80 Дж), пробитый враг не свободен от страха, но многие наши стрелы попадают в него и не пробивают; даже тонкой 1-мм стальной пластины достаточно для полной безопасности (если вы задаетесь вопросом - подождите, почему он не так хорош, как обычный длинный лук на близком расстоянии? - Угол удара больше, есть больше почты, чтобы пробить). Ибо наш более типичный длинный лук (эффективная энергия удара сейчас около 55 Дж или около того) действительно может пробить только текстильные доспехи, да и то лишь в некоторых случаях. Наш самый слабый лук (энергия удара сейчас около 40 Дж), скорее всего, не сможет пробить даже хороший гамбезон при сильном попадании - если лук вообще сможет выпустить стрелу на такое расстояние. На этой дистанции противники в почтовых доспехах могут считать себя в полной безопасности. Противники в пластинчатых доспехах фактически неуязвимы для нашего огня.
+На дальних дистанциях - 200 м - ситуация для наших лучников становится гораздо хуже. Наши стрелы потеряли еще больше энергии (общие потери составляют около 20%), а угол попадания стал гораздо менее благоприятным (почти 30 градусов). Естественный эффект наклона угла удара теперь означает, что нам приходится пробивать на 16% больше материала. Для нашего самого мощного лука (эффективная энергия удара теперь составляет всего 80 Дж), пробитый враг не свободен от страха, но многие наши стрелы попадают в него и не пробивают; даже тонкой 1-мм стальной пластины достаточно для полной безопасности (если вы задаетесь вопросом - подождите, почему он не так хорош, как обычный длинный лук на близком расстоянии? - Угол удара больше, необходимо пробить больший слой доспеха). Ибо наш более типичный длинный лук (эффективная энергия удара сейчас около 55 Дж или около того) действительно может пробить только текстильные доспехи, да и то лишь в некоторых случаях. Наш самый слабый лук (энергия удара сейчас около 40 Дж), скорее всего, не сможет пробить даже хороший гамбезон при сильном попадании - если лук вообще сможет выпустить стрелу на такое расстояние. На этой дистанции противники в кольчужных доспехах могут считать себя в полной безопасности. Противники в пластинчатых доспехах фактически неуязвимы для нашего огня.
 
 Конечно, с увеличением дальности происходит и другое: точность тоже падает. На расстоянии 200 м стрелы нашего лучшего лука находятся в воздухе около 4,5 секунды (разумеется, на этой дистанции мы стреляем в массы людей, а не в отдельных людей). Следует также отметить, что на экстремальных дистанциях стрелы резко спускаются вниз, что повышает вероятность попадания в наплечники или короны шлемов - самые толстые и эффективно наклоненные части доспехов.
 
@@ -130,7 +130,7 @@ author: Bret Devereaux
 
 Главный вывод: падение летальности лука против бронированных противников на Дистанции довольно серьезное. Следует добавить, что для арбалетов оно еще сильнее, поскольку, как уже отмечалось, после выстрела они замедляются гораздо быстрее - увы, чтобы выяснить, насколько быстро, требуются дополнительные испытания.
 
-Размышляя о залпе из длинного лука, если мы представим себе колоколообразную кривую энергии выстрела, сосредоточенную около 80-90 Дж против наступающего доспеха, мы можем предположить, что на расстоянии 200 м только самые сильные луки будут иметь хорошую смертоносность против доспехов (даже если это просто почта или гамбезон). Количество "угрозы", которую луки могут отбросить на максимальную дистанцию, на самом деле почти ничтожно против даже умеренно бронированных людей. В то время как на расстоянии 100 м все наши луки потенциально смертоносны, а некоторые вполне способны пробить доспехи. Ниже этого расстояния летальность будет быстро расти, как по мере того, как стрелы будут прибывать с силой, способной поразить более грозную защиту, так и по мере того, как лучники будут достаточно близко к своим целям, чтобы начать целиться в слабые места.
+Размышляя о залпе из длинного лука, если мы представим себе колоколообразную кривую энергии выстрела, сосредоточенную около 80-90 Дж против наступающего доспеха, мы можем предположить, что на расстоянии 200 м только самые сильные луки будут иметь хорошую смертоносность против доспехов (даже если это просто кольчуга или гамбезон). Количество "угрозы", которую луки могут отбросить на максимальную дистанцию, на самом деле почти ничтожно против даже умеренно бронированных людей. В то время как на расстоянии 100 м все наши луки потенциально смертоносны, а некоторые вполне способны пробить доспехи. Ниже этого расстояния летальность будет быстро расти, как по мере того, как стрелы будут прибывать с силой, способной поразить более грозную защиту, так и по мере того, как лучники будут достаточно близко к своим целям, чтобы начать целиться в слабые места.
 
 ## Тактические последствия для пеших лучников
 Ладно, с математикой покончено, обещаю. Можете выходить.
@@ -150,7 +150,7 @@ author: Bret Devereaux
 
 Проблему усугубляют боеприпасы. В системе Total War нет необходимости экономить боеприпасы для последнего, высоколетального подхода, поскольку выстрелы имеют одинаковую летальность на всех дистанциях. А вот выносливость при стрельбе - как самого лучника, так и его боеприпасов - была реальной проблемой. Дальнобойщик вполне мог израсходовать все свои боеприпасы - или силу своего оружия - всего за несколько минут. Тратить это время на очень неэффективную стрельбу на дальние дистанции было бы крайне глупо.
 
-Напротив, факты убедительно свидетельствуют о том, что даже английские лучники не стреляли с гораздо более близких дистанций. Я не знаю, удалось ли кому-то точно определить эту зону (свидетельств недостаточно для того, чтобы говорить о большой точности), но, похоже, она находится где-то в районе 80-100 м (Лоадс предлагает до 50 м, но это кажется чрезмерно коротким, учитывая описания первоисточников и топографию поля боя). В свою очередь, это как раз соответствует расстоянию, на котором смертоносность стрел против доспехов начинает быстро расти, поскольку стрелы длинных луков начинают надежно пробивать почту (помните, что даже у закованных в пластины рыцарей некоторые уязвимые места, такие как подмышки, шея или пах, все еще могут быть защищены только почтой).
+Напротив, факты убедительно свидетельствуют о том, что даже английские лучники не стреляли с гораздо более близких дистанций. Я не знаю, удалось ли кому-то точно определить эту зону (свидетельств недостаточно для того, чтобы говорить о большой точности), но, похоже, она находится где-то в районе 80-100 м (Лоадс предлагает до 50 м, но это кажется чрезмерно коротким, учитывая описания первоисточников и топографию поля боя). В свою очередь, это как раз соответствует расстоянию, на котором смертоносность стрел против доспехов начинает быстро расти, поскольку стрелы длинных луков начинают надежно пробивать кольчугу (помните, что даже у закованных в пластины рыцарей некоторые уязвимые места, такие как подмышки, шея или пах, все еще могут быть защищены только кольчугой).
 
 ## Тактические последствия для конных лучников
 Мобильность конных лучников (под которой я подразумеваю настоящих конных лучников в стиле степных кочевников, а не конных пеших лучников английского типа) создает еще более сложный набор тактических соображений. Перемещение пеших лучников по полю боя может быть довольно сложным; например, по общему мнению, английские лучники при Азенкуре были очень уязвимы, пока собирали свои колья и двигались. Последующий опыт английских лучников, оказавшихся не на своей позиции на поздних этапах Столетней войны, похоже, подтверждает это (например, Форминьи, 1450 г.). Такие перемещения также затруднены с точки зрения командования, если они не были запланированы.
