--- a/src/content/posts/forgotten-realms/factions-phlan.mdx
+++ b/src/content/posts/forgotten-realms/factions-phlan.mdx
@@ -1,10 +1,16 @@
 ---
 draft: true
-title: "ОРГАНИЗАЦИИ ВО ФЛАНЕ"
-description: "ОРГАНИЗАЦИИ ВО ФЛАНЕ"
+title: "Организации во Флане"
+description: "Организации во Флане"
 date: "2018-03-13"
-categories: 
-  - "homebrew"
+tags: 
+  - "Забытые Королевства"
+  - "Forgotten Realms"
+  - "Организации"
+  - "Лига Авантюристов"
+  - "1 сезон"
+  - "Лунное море"
+  - "Флан"
 ---
 
 # Organizations Active in the City
