--- a/src/content/posts/forgotten-realms/mulmaster.mdx
+++ b/src/content/posts/forgotten-realms/mulmaster.mdx
@@ -1,19 +1,17 @@
 ---
-draft: true
-title: "Мулмастер"
-description: "Мулмастер"
+title: "Мулмастер. Положение дел."
+description: "Мулмастер. Положение дел."
 date: "2018-03-14"
-categories: 
-  - "adventurers-league"
-  - "homebrew"
-  - "forgottenrealms"
 tags: 
-  - "forgotten-realms"
-  - "mulmaster"
-  - "season-2"
+  - "Лига Авантюристов"
+  - "2 сезон"
+  - "Лунное море"
+  - "Мулмастер"
+  - "Забытые Королевства"
+  - "Forgotten Realms"
 ---
 
-Положение дел. Мулмастер. Положение дел.
+Положение дел. 
 
 > Говорят, что наш девиз это: «БЕРИ ВСЁ И СРАЗУ!КТО ЗНАЕТ, ЧТО ЖДЕТ ТЕБЯ ЗАВТРА?» Пожалуй, я предпочел бы что-то менее мрачное, но нет времени придумать новый: ведь нужно успеть взять всё и сразу.
 
