--- a/src/content/posts/forgotten-realms/order-of-shooting-star.mdx
+++ b/src/content/posts/forgotten-realms/order-of-shooting-star.mdx
@@ -3,12 +3,11 @@ draft: true
 title: "Орден Стреляющей Звезды"
 description: "Орден Стреляющей Звезды"
 date: "2018-03-20"
-categories: 
-  - "adventurers-league"
-  - "homebrew"
-  - "forgottenrealms"
 tags: 
-  - "forgotten-realms"
+  - "Забытые Королевства"
+  - "Forgotten Realms"
+  - "Организации"
+  - "Мистра"
 ---
 
  
