--- a/src/content/posts/forgotten-realms/order-of-the-gauntlet.mdx
+++ b/src/content/posts/forgotten-realms/order-of-the-gauntlet.mdx
@@ -1,14 +1,12 @@
 ---
-draft: true
 title: "Орден Латной Перчатки"
 description: "Орден Латной Перчатки"
 date: "2016-03-21"
-categories: 
-  - "homebrew"
-  - "forgottenrealms"
 tags: 
-  - "5e"
-  - "forgotten-realms"
+  - "Забытые Королевства"
+  - "Forgotten Realms"
+  - "Организации"
+  - "Орден Латной Перчатки"
 ---
 
 ### [Руководство по фракциям](https://adventurersleague.wordpress.com/%d1%84%d1%80%d0%b0%d0%ba%d1%86%d0%b8%d0%b8/)
@@ -56,7 +54,7 @@ tags:
 
 Праведная Длань (Righteous Hand, ранг 5)
 
-Известные представители:
+## Известные представители:
 
 Онтарр Фрам
 
@@ -84,4 +82,4 @@ https://forgottenrealms.wikia.com/wiki/Order\_of\_the\_Gauntlet
 
 * * *
 
-См. также [Орден Золоченого Глаза](https://adventurersleague.wordpress.com/order-of-the-gilded-eye/)
+См. также [Орден Золоченого Глаза](/posts/forgotten-realms/order-of-the-gilded-eye/)
