--- a/src/content/posts/articles/animate-dead-for-dummies.mdx
+++ b/src/content/posts/articles/animate-dead-for-dummies.mdx
@@ -75,25 +75,25 @@ tags:
 
 Размер квадрата, который будет занимать ваша армия нежити.
 
-| Максимальный размер армии | Размер каре (сторона квадрата) |
-|---------------------------|--------------------------------|
-|                           |                                |
-| 8                         | 2                              |
-| 12                        | 2,45                           |
-| 18                        | 3,16                           |
-| 24                        | 3,74                           |
-| 38                        | 4,9                            |
-| 46                        | 5,48                           |
-| 56                        | 6,16                           |
-| 56                        | 6,16                           |
-| 68                        | 6,93                           |
-| 68                        | 6,93                           |
-| 82                        | 7,75                           |
-| 82                        | 7,75                           |
-| 100                       | 8,6                            |
-| 108                       | 8,94                           |
-| 118                       | 9,38                           |
-| 130                       | 9,9                            |
+| Максимальный размер армии | Размер каре (сторона квадрата), клеток | Размер каре (сторона квадрата), футов |
+|---------------------------|----------------------------------------|---------------------------------------|
+|                           |                                        |                                       |
+| 8                         | 2,83                                   | 14,14                                 |
+| 12                        | 3,46                                   | 17,32                                 |
+| 18                        | 4,24                                   | 21,21                                 |
+| 24                        | 4,90                                   | 24,49                                 |
+| 38                        | 6,16                                   | 30,82                                 |
+| 46                        | 6,78                                   | 33,91                                 |
+| 56                        | 7,48                                   | 37,42                                 |
+| 56                        | 7,48                                   | 37,42                                 |
+| 68                        | 8,25                                   | 41,23                                 |
+| 68                        | 8,25                                   | 41,23                                 |
+| 82                        | 9,06                                   | 45,28                                 |
+| 82                        | 9,06                                   | 45,28                                 |
+| 100                       | 10,00                                  | 50,00                                 |
+| 108                       | 10,39                                  | 51,96                                 |
+| 118                       | 10,86                                  | 54,31                                 |
+| 130                       | 11,40                                  | 57,01                                 |
 
 > Обратите также внимание на защиту скелетов от массового урона - лучший способ это паладин. Желательно с Holy Avenger.
 
