--- a/src/content/posts/adventurers-league/player-guide-12-season.mdx
+++ b/src/content/posts/adventurers-league/player-guide-12-season.mdx
@@ -6,7 +6,7 @@ tags:
   - "Лига Авантюристов"
   - "Перевод"
   - "Руководство игрока"
-  - "12 сезон"
+  - "сезон 12"
 ---
 
 [Перевод руководства игрока по Лиге Авантюристов (12й сезон)](https://cyborgsandmages.com/?p=11613 "Оригинал статьи.") был опубликован — [Киборги и Чародеи](https://cyborgsandmages.com)
