--- a/src/content/posts/translations/dragnacarta-fundamental-combat-tactics-dnd-5e.mdx
+++ b/src/content/posts/translations/dragnacarta-fundamental-combat-tactics-dnd-5e.mdx
@@ -1,5 +1,4 @@
 ---
-draft: true
 title: "Основы тактики - Руководство для игроков и мастеров"
 description: "Основы тактики - Руководство для игроков и мастеров"
 date: "2022-07-07"
@@ -10,6 +9,7 @@ tags:
   - "Советы Мастеру"
   - Перевод
 author: DragnaCarta
+translator: Евгений Вислоухов
 ---
 
 **Вы оснастили своего полуэльфа-волшебника лучшим снаряжением, лучшими заклинаниями и, хотелось бы надеяться, лучшими остротами. Но вот вы находитесь в гуще сражения, судорожно бегая глазами по своему листу персонажа, и пытаетесь ответить на вопрос: «Что мне делать дальше?».**
@@ -35,7 +35,7 @@ author: DragnaCarta
 
 Метательное копьё, брошенное огром (+6 к попаданию), имеет 70% шанс попасть по третьеуровневому чародею с классом защиты (КЗ) 13. Учитывая урон, равный 2к6 + 4 (в среднем 11), — это не шутки для персонажа с 20 хитами. Впрочем, если он находится за 1/2 укрытием (+2 к КЗ), то шанс попасть снижается до 60%; 3/4 укрытие (+5 к КЗ) оставляет бедного огра с шансом в 45%, снижая его потенциальный урон с 7.7 до 5. А полное укрытие, что очевидно, снижает его до нуля.
 
-  ![](images/070722_1831_1.jpg)
+![](https://cyborgsandmages.com/images/070722_1831_1.jpg)
 
 Если вам доступно укрытие, прячьтесь за него! Особенно хорошо, когда есть возможность закончить ход за _полным_ укрытием — то есть так, чтобы вы с врагом не видели друг друга. В конце концов, никто не запрещает вам выбежать на 15 футов из своего укромного местечка, выстрелить из арбалета, а затем вернуться обратно.
 
@@ -49,7 +49,7 @@ author: DragnaCarta
 
    
 
-![](images/070722_1831_2.jpg)
+![](https://cyborgsandmages.com/images/070722_1831_2.jpg)
 
 Три гоблина удерживают узкий проход, зажав основного бойца незадачливой группы искателей приключений.
 
@@ -85,7 +85,7 @@ author: DragnaCarta
 
 Что если вместо этого летучие мыши будут применять действие «помощь», давая своему хозяину преимущество к атакам? Вероятность попадания повысится, как и наносимый им потенциальный урон — с 8.5 до 11.76. Это не _громадная_ разница, но когда эффективность становится во главу угла — на счету каждая единица урона и каждый источник давления. Чем глубже пропасть между уроном монстра и уроном его приспешников (и чем выше КЗ их цели), тем большее преимущество даёт выбор помощи в угоду атакам.
 
- ![](images/070722_1831_3.jpg)
+ ![](https://cyborgsandmages.com/images/070722_1831_3.jpg)
 
 ## 6\. Атакуйте из темноты (или тумана)
 
@@ -119,7 +119,7 @@ author: DragnaCarta
 
    
 
- ![](images/070722_1831_4.jpg)
+ ![](https://cyborgsandmages.com/images/070722_1831_4.jpg)
 
 ## Заключение
 
