--- a/src/content/posts/adventurers-league/first-season-narrative.mdx
+++ b/src/content/posts/adventurers-league/first-season-narrative.mdx
@@ -2,7 +2,7 @@
 title: "Повествование к 1-ому сезону Лиги Авантюристов"
 description: "Повествование к 1-ому сезону Лиги Авантюристов"
 date: "2018-03-13"
-categories: 
+tags: 
   - "Лига Авантюристов"
   - "сезон 1"
   - "Флан"
