--- a/src/content/posts/forgotten-realms/dengi-korolevstv.mdx
+++ b/src/content/posts/forgotten-realms/dengi-korolevstv.mdx
@@ -1,13 +1,10 @@
 ---
-draft: true
 title: "Деньги Королевств"
 description: "Деньги Королевств"
 date: "2016-04-21"
 tags: 
-  - "homebrew"
-  - "forgottenrealms"
-  - "5e"
-  - "forgotten-realms"
+  - "Деньги"
+  - "Забытые Королевства"
 ---
 
 Практически у любого крупного государства Фаэруна есть собственная валюта - монеты, которые чеканятся на территории государства, представляют собой и его влияние, и материальное богатство. Большинство монет из чистого металла и стандартного веса принимаются как средство оплаты по всему континенту по номинальной стоимости, хотя не каждая страна или город-государство чеканит монеты всех номиналов.
