--- a/src/content/posts/articles/zachem-boyu-narrativ.mdx
+++ b/src/content/posts/articles/zachem-boyu-narrativ.mdx
@@ -11,7 +11,7 @@ tags:
 
 ## Зачем бою нарратив?
 
-«Я бегу и атакую». «Я стреляю из моего лука». «Ну-у, я думаю, что бегу и бью его?» «Атака». «Я буду создавать круг льда вокруг него, который поднимается на 30 футов, и ему придётся вылетать вверх из него, чтобы не попасть в ловушку. Спас бросок Ловкости». «Дважды тыркаю его». <!--more--> Нарратив в бою должен быть не просто описательным текстом заклинаний и способностей. Он должен рождать решения и давать каждому игроку трамплин для новых крутых идей **каждый раунд**. Однако, такое сложно провернуть в игре. Но не всё так страшно. К концу статьи у вас будет представление, как **втянуть в бой** ваших друзей, приятелей и случайных игроков.
+«Я бегу и атакую». «Я стреляю из моего лука». «Ну-у, я думаю, что бегу и бью его?» «Атака». «Я буду создавать круг льда вокруг него, который поднимается на 30 футов, и ему придётся вылетать вверх из него, чтобы не попасть в ловушку. Спас бросок Ловкости». «Дважды тыркаю его». Нарратив в бою должен быть не просто описательным текстом заклинаний и способностей. Он должен рождать решения и давать каждому игроку трамплин для новых крутых идей **каждый раунд**. Однако, такое сложно провернуть в игре. Но не всё так страшно. К концу статьи у вас будет представление, как **втянуть в бой** ваших друзей, приятелей и случайных игроков.
 
 ## Зачем?
 
@@ -21,7 +21,7 @@ tags:
 
 ## Не блокируй игроков
 
-«Я хочу схватиться за верёвку, свеситься вверх ногами и выстрелить вниз в тролля, который удерживает Катайю». Ваш ответ должен быть **100%**: «Ты можешь попробовать!» Почему? Потому что **по правилам** ничего не меняется. Они дополняют странными описаниями свою атаку, да. Но они не просят каких-либо бонусов, например, за атаку сверху. Я знавал DM'ов, которые обычно на такие заявки говорят нечто подобное: «Болт арбалета выпадет из паза». Или: «Ты можешь попробовать, но проверка с пенальти -5 и недостатком». Такие DM'ы буквально облагают налогами игроков на полностью декоративные нарративные решения просто так. Вот так игроки переходят в состояние **по умолчанию**: «Стреляю два раза». Никакого описания, никаких декораций, никакого риска, ни вознаграждения и никаких тебе невероятных трюков. Поэтому они довели заявку до абстракции в правилах, чтобы не получить **_пенальти_**. Не поймите меня неправильно, ваших игроков следует удерживать от попыток постоянно выбить игровые механические преимущества. Вам следует следить за таким игроком до тех пор, пока он не войдёт в ваш игровой стиль. «Так как я сверху у меня преимущество, верно? Стреляю ровно вниз. Если попаду, то это же будет голова! Поэтому **как минимум** это должно быть критическим попаданием». Можете заработать головную боль, если будете потакать любой потуге игрока. Будьте осторожней. Вам точно не захочется научить призывать к «но ведь я выше них» абсолютно каждый бой в разрез механики игры. Только если вы сами не против иметь дело с автоматическими критическими атаками против всего с чем они борются.
+«Я хочу схватиться за верёвку, свеситься вверх ногами и выстрелить вниз в тролля, который удерживает Катайю». Ваш ответ должен быть **100%**: «Ты можешь попробовать\!» Почему? Потому что **по правилам** ничего не меняется. Они дополняют странными описаниями свою атаку, да. Но они не просят каких-либо бонусов, например, за атаку сверху. Я знавал DM'ов, которые обычно на такие заявки говорят нечто подобное: «Болт арбалета выпадет из паза». Или: «Ты можешь попробовать, но проверка с пенальти -5 и недостатком». Такие DM'ы буквально облагают налогами игроков на полностью декоративные нарративные решения просто так. Вот так игроки переходят в состояние **по умолчанию**: «Стреляю два раза». Никакого описания, никаких декораций, никакого риска, ни вознаграждения и никаких тебе невероятных трюков. Поэтому они довели заявку до абстракции в правилах, чтобы не получить **_пенальти_**. Не поймите меня неправильно, ваших игроков следует удерживать от попыток постоянно выбить игровые механические преимущества. Вам следует следить за таким игроком до тех пор, пока он не войдёт в ваш игровой стиль. «Так как я сверху у меня преимущество, верно? Стреляю ровно вниз. Если попаду, то это же будет голова\! Поэтому **как минимум** это должно быть критическим попаданием». Можете заработать головную боль, если будете потакать любой потуге игрока. Будьте осторожней. Вам точно не захочется научить призывать к «но ведь я выше них» абсолютно каждый бой в разрез механики игры. Только если вы сами не против иметь дело с автоматическими критическими атаками против всего с чем они борются.
 
 ## Обратная связь с предыдущим ходом
 
@@ -29,15 +29,15 @@ tags:
 
 > «Кайлин спрыгнул вниз с высокого балкона на задний край повозки и успела удержаться за неё. Поэтому я пришпорю свою лошадь, чтобы подхватить его до падения».
 
-> «Хорошо, давай проверку Animal Handling. 18? Ты подводишь свою лошадь прямо и ровняешься с Кайлином. Однако, дым внутри повозки создаёт помеху для обзора. Броня Кайлина цепляется за тент, когда ты пытаешься снять его! Таша, твой ход.»
+> «Хорошо, давай проверку Animal Handling. 18? Ты подводишь свою лошадь прямо и ровняешься с Кайлином. Однако, дым внутри повозки создаёт помеху для обзора. Броня Кайлина цепляется за тент, когда ты пытаешься снять его\! Таша, твой ход.»
 
 > «Значит Жак пришпорил лошадь и старается снять Кайлина, но там всё ещё извозчик хлестанет лошадей хлыстом. Я хочу попытаться убить этого парня, чтобы он высвободил поводья.»
 
-> «Конечно! Ты на достаточном расстоянии для атаки. Кидай атаку.»
+> «Конечно\! Ты на достаточном расстоянии для атаки. Кидай атаку.»
 
 > «Поскольку я хороший лучник, можно ли мне выстрелить ему только в руку?»
 
-> «Не… У нас нет попаданий по частям тела. Но я уверен, что он не сможет также быстро вести повозку со стрелой в боку. Кидай!»
+> «Не… У нас нет попаданий по частям тела. Но я уверен, что он не сможет также быстро вести повозку со стрелой в боку. Кидай\!»
 
 Разительные изменения в вашу игру придут, когда вы заставите игроков следовать этому правилу. Общими словами вспомнить предыдущий ход и добавить свой, когда приходит твой момент славы. Уверьте ваших игроков, что вы на их стороне («он может бросить поводья») без добавления дополнительной или новой механики для достижения цели («кидай с недостатком, чтобы попасть в руку и заставить его сбросить поводья»).
 
@@ -47,7 +47,7 @@ tags:
 
 > «Ясно, что пытался сделать Таша. Заставить бросить поводья и помочь замедлиться повозке. Но он промахнулся. Я воин и мастер боя. Один из моих ходов позволяет мне обезоружить оппонента, если я могу попасть по нему. Сработает?»
 
-> «Конечно! Если ты потратишь кубик превосходства, а они провалят свой спасбросок, то ты вынудишь его бросить поводья. Ты тренировался ровно для таких вот ситуаций. Кидай!»
+> «Конечно\! Если ты потратишь кубик превосходства, а они провалят свой спасбросок, то ты вынудишь его бросить поводья. Ты тренировался ровно для таких вот ситуаций. Кидай\!»
 
 Видите? Дали бы вы игромеханическое преимущество Таше в последнем раунде, то не было бы причины вашему Мастеру Боя использовать свою способность. Скорее всего они бы попробовали ещё раз вместо того, чтобы придумать изобретательный ход применения навыков. Дайте возможность подсекать и обезоруживать противников Плуту, если он с самого начала выстроил такие способности. А вот магу нужен доступ к магическим книгам и томам, чтобы манипулировать полем боя. Каждый персонаж обладает набором навыков, которые можно применять новым интересным и необычным путём. Всё что требуется от вас — следовать желаниям игроков в повествовании, поддерживать интерес и активность в игре.
 
@@ -55,7 +55,7 @@ tags:
 
 > «Хм-м, это будет очень сложно для тебя. Тяжёлая броня, крупные неуклюжие оружия. Тебе бы пришлось проверять Ловкость, чтобы не упасть… Но повозка не захвачена пламенем, она просто в дыму и тлеет. Ты легко смог бы пробиться через ткань на повозку, а там уже пройти по ней к извозчику, однако, если бы тебя могли наклонить. Ты также можешь вскарабкаться на крышу повозки с проверкой Атлетики. Или даже снести колесо рядом с тобой, сбив повозку с курса тем самым. Любой вариант возможен».
 
-> «Тебе даже не надо меня спрашивать дважды. Я сломаю стенку между мной и извозчиком и попытаюсь его схватить!»
+> «Тебе даже не надо меня спрашивать дважды. Я сломаю стенку между мной и извозчиком и попытаюсь его схватить\!»
 
 **Много** DM'ов, MC, Киперов, Рулеров, GM'ов и прочих подобных придерживаются странного правила «**не заставляйте** их делать чего-либо». Но ваши игроки надеются на то, что вы предоставите им достаточно информации для решения. Если бы Кайлин знал о том, что стена выглядела сломанной, и знал о колесе рядом с ним, знал о прочности крыше повозки, способной выдержать тяжелого человека — то его действия могли быть совсем другими. Но это движущееся, меняющееся, эволюционирующее и изменчивое воображаемое пространство. И даже ты, рассказчик, должен собраться и повторять для себя окружение. Будет мудро давать игрокам ниточки, за которые они могут потянуть. Опции, которыми они смогут продемонстрировать свои способности в интересном виде. Энергетика за столом взорвётся, когда ход будет начинаться с чего-то подобного:
 
@@ -65,9 +65,9 @@ tags:
 
 У вас всегда будет игрок, который уделяет меньше внимания нежели другие игроки. Так постоянно случается. Такой игрок будет всё чаще сбиваться и смущаться происходящему. Возможно, ему попросту сложно вспомнить события боя 20 минутной давности. На протяжении моей карьеры DM'а я всё меньше и меньше уделял внимания микро-деталям энкаунтеров. Я хотел, чтобы мои игроки делали крутое дерьмо. И один из путей впутать невнимательных игроков в СОЗДАНИЕ крутого дерьма — создание эволюции энкаунтера вокруг них.
 
-> Ваши игроки идут к замку, где они должны были встретить причиняющего беспокойство хозяина. Вдруг охранники открывают по вам огонь! Толпа людей бежит в направлении партии, стрелы продолжают свистеть рядом. Инициатива. Паладин немного скучающий спрашивает: «Подождите, я думал мы должны были с ним встретиться?» **ДО ТОГО, КАК ВАШИ ИГРОКИ** разрывают его в клочья за отвлечение, введите его в игру обратно снова. Дайте **игре** возможность ответить на эти вопросы и эволюционировать.
+> Ваши игроки идут к замку, где они должны были встретить причиняющего беспокойство хозяина. Вдруг охранники открывают по вам огонь\! Толпа людей бежит в направлении партии, стрелы продолжают свистеть рядом. Инициатива. Паладин немного скучающий спрашивает: «Подождите, я думал мы должны были с ним встретиться?» **ДО ТОГО, КАК ВАШИ ИГРОКИ** разрывают его в клочья за отвлечение, введите его в игру обратно снова. Дайте **игре** возможность ответить на эти вопросы и эволюционировать.
 
-> «Крид, ты видишь, что стрелы летят не в случайном направлении. Пролетают они над головами твоих товарищей и прямо в твою подопечную Нури! Она прячется за тобой и кричит: «**Крид! Они пытаются убить меня. Я знала лорд Т…»** И стрела втыкается в неё чуть выше бедра. Что ты будешь делать?»
+> «Крид, ты видишь, что стрелы летят не в случайном направлении. Пролетают они над головами твоих товарищей и прямо в твою подопечную Нури\! Она прячется за тобой и кричит: «**Крид\! Они пытаются убить меня. Я знала лорд Т…»** И стрела втыкается в неё чуть выше бедра. Что ты будешь делать?»
 
 Недостаточно просто дать ответ на вопрос и затем идти сверху вниз по инициативе до тех пор пока что-то интересное не случится. Вам нужно буквально воткнуть безотлагательность на игроков, которые меньше всего инвестируют в игру. Убедитесь в том, что они достаточно осведомлены для реакции. Пробуйте достать их игрой и толкнуть в игровой процесс. Не ожидайте от них реакции и действий. Активно преследуйте их интересны и вклады и большую часть времени вы будете получать отдачу. Вместо: «Жду кого-нибудь ударить своим мечом». Вы получите: «Куда я мог бы оттащить Нури? Могу ли я защитить её своим щитом? У меня огромное AC и полно HP. Можем ли отойти достаточно далеко, чтобы стрелы не достали нас? Сможет ли она бежать после моего лечения под моим прикрытием? Зейн, делай _Fog Cloud_, чтобы в нас не попали, пока я лечу её_»._ Такого рода мышление вам следует добавиться в ваших боевых столкновениях. Иначе ваши игроки превратятся в наборы цифр урона вместо живых людей.
 
