--- a/src/content/posts/articles/about-system-of-dnd-5e.mdx
+++ b/src/content/posts/articles/about-system-of-dnd-5e.mdx
@@ -51,24 +51,30 @@ tags:
 
 В разделе правил по сражению приводятся правила по сбиванию с ног или толканию существ – используй проверку Атлетики против Атлетики или Акробатики существа, размер которого больше твоего не более чем на одну категорию и в случае успеха ты или сбиваешь с ног или толкаешь на 5 футов. Собственно это базовое правило.
 
-А теперь посмотрим на реализацию этих же приемов у Мастера Битвы с его Сбивающей с ног атакой и Толкающей атакой. В описаниях этих двух приемов указано что существо должно быть размером не больше Большего, должно совершить спасбросок Силы и в случае Толкающей атаки – существо толкается на 15 футов. Проблема очевидна – даже увеличенный боец с помощью заклинания Увеличение все еще может сбивать с ног только больших существ, а не огромных. Размер существа инициатора почему перестает быть важным. А дальность толкания становится равной просто 5 футам.
+А теперь посмотрим на реализацию этих же приемов у Мастера Битвы с его Сбивающей с ног атакой и Толкающей атакой. В описаниях этих двух приемов указано что существо должно быть размером не больше Большего, должно совершить спасбросок Силы и в случае Толкающей атаки – существо толкается на 15 футов. Проблема очевидна – даже увеличенный боец с помощью заклинания Увеличение все еще может сбивать с ног только больших существ, а не огромных. Размер существа инициатора почему перестает быть важным. А дальность толкания становится равной просто 15 футам.
 
-У монаха открытой ладони есть возможность заменить свою атаку на попытку сбития с ног и существо должно совершить не проверку Атлетики или Акробатики, не спасбросок Силы, а спасбросок Ловкости или будет сбито с ног. В ревизии 2024 года появляется Оружейное мастерство Topple – которое позволяет также сбивать с ног и целевое существо должно сделать уже спасбросок Телосложения (и без ограничения размеров). Также у этого самого монаха открытой ладони есть возможность толкнуть – и целевое существо должно преуспеть в спасброске Силы чтобы не быть оттолкнутым на 15 футов. А оружейное мастерство Push – вообще не требует спасброска и отталкивает существо на 10 футов, правда есть ограничение по размеру – Большой или больше.
+У монаха открытой ладони есть возможность заменить свою атаку на попытку сбития с ног и существо должно совершить не проверку Атлетики или Акробатики, не спасбросок Силы, а спасбросок Ловкости или будет сбито с ног. В ревизии 2024 года появляется Оружейное мастерство Topple – которое позволяет также сбивать с ног и целевое существо должно сделать уже спасбросок Телосложения (и без ограничения размеров). Также у этого самого монаха открытой ладони есть возможность толкнуть – и целевое существо должно преуспеть в спасброске Силы чтобы не быть оттолкнутым на 15 футов. А оружейное мастерство Push – вообще не требует спасброска и отталкивает существо на 10 футов, правда есть ограничение по размеру – Большой или меньше.
 
 Как видим – со сбиванием с ног и толканием системности не наблюдается. Мы видим, что в качестве защиты может использоваться любой из физических спасбросков, Атлетика, Ловкость или вообще не использоваться. При использовании классовых особенностей размер цели или не ограничен или Большой и меньше, тогда как в основных правилах цель может быть больше на одну категорию.
 
 ## Увеличение и Мощь Великана
-Заклинание Увеличения увеличивает размер существа на 1 категорию и атаки оружием ближнего боя этого существа наносят дополнительно 1к4 урона. А вот особенность подкласса Бойца Рунический рыцарь Мощь Великана при увеличении до большого размера дает позволяет дополнительно наносить 1к6 урона атакой оружием ближнего боя, но не более одного раза в ход. А вот у дуэргаров из Бестиария при сотворении Увеличения на себя урон увеличивается не на 1к4 урона, а добавляется бонусная кость урона.
+Из Бестиария мы знаем что при увеличении размера существа на 1 категорию - к урону добавляется одна кость урона (начиная со среднего размера).
+
+Но заклинание Увеличения увеличивает размер существа на 1 категорию и атаки оружием ближнего боя этого существа наносят дополнительно 1к4 урона (это объясняется балансом заклинания). 
+
+А вот особенность подкласса Бойца Рунический рыцарь Мощь Великана при увеличении до большого размера дает позволяет дополнительно наносить 1к6 урона атакой оружием ближнего боя, но не более одного раза в ход - эффект - Увеличение на 1 категорию тот же, а результат уже другой. 
+
+А вот у дуэргаров из Бестиария при сотворении того же заклинания Увеличения на себя урон увеличивается не на 1к4 урона, а добавляется бонусная кость урона.
 
 По сути – три реализации одного и того же явления. И три разных эффекта.
 
 ## Заклинания контроля и Гипнотический узор
-Практически все заклинания контроля позволяют существу под воздействием перебрасывать спасбросок в конце хода. Но не Гипнотический узор.
+Практически все заклинания контроля позволяют существу под воздействием перебрасывать спасбросок в конце хода. Но не Гипнотический узор. Хотя разработчики посвятили не одну статью описанию изменений заклинаний контроля и что переброс спасброска в конце хода существа важен. Но вот в Гипнотическом узоре забыли. Бывает, чо.
 
 ## Подкласс Кавалерист и черта Страж, Хексблейд и мультиклассы из паладина, чародея или барда, мультикласс в клерика Войны или Жизни
-Одна из особенностей подкласса Кавалерист практически дублирует один из эффектов черты Страж. Если бы подкласс разрабатывался с учетом наличия черт – этой проблемы не возникло.
+Одна из особенностей подкласса Кавалерист практически дублирует один из эффектов черты Страж. Если бы подкласс разрабатывался с учетом наличия черт – этой проблемы не возникло. Почему это плохо? Потому что черта это универсальный "кубик" создания персонажа и подкласс не должен использовать особенности черт в своих особенностях либо учитывать возможность дублирования (как это происходит при получении уже умеющихся навыков)
 
-Второй пример разработки без учета существующих уже элементов – это особенности подкласса колдуна Хексблейд, которые делают мультиклассирование в него из паладина, барда (в большей степени) и чародея (в меньшей) – очень эффективными. 
+Второй пример разработки без учета существующих уже элементов – это особенности подкласса колдуна Хексблейд, которые делают мультиклассирование в него из паладина, барда (в большей степени) и чародея (в меньшей) – очень эффективными - и что стало бедой в рамках той же Лиги Авантюристов.
 
 Также и для всех классов без доступа к средним и тяжелым доспехом является крайне выгодным мультиклассирование в клерика домена Войны или Жизни, что позволяет получить навыки владения доспехами за 1 уровень мультикласса.
 
