--- a/src/content/posts/forgotten-realms/frakcii.mdx
+++ b/src/content/posts/forgotten-realms/frakcii.mdx
@@ -23,12 +23,13 @@ tags:
 
 ## Продвижение во фракции
 
-**Ранг | Очки признания | Дополнительные требования**  
-1 | 0 | нет  
-2 | 3 | нет  
-3 | 10 - 5 уровень, 1 секретная миссия  
-4 | 25 - 11 уровень, 3 секретные миссии  
-5 | 50 - 17 уровень, 10 секретных миссий
+|**Ранг** | **Очки признания** | **Дополнительные требования**|  
+|---:|:---:|:---|
+|1 | 0 | нет  |
+|2 | 3 | нет  |
+|3 | 10 | 5 уровень, 1 секретная миссия  |
+|4 | 25 | 11 уровень, 3 секретные миссии  |
+|5 | 50 | 17 уровень, 10 секретных миссий |
 
 ## **РАНГ 1. ПОСВЯЩЕННЫЙ (INITIATE)**
 
@@ -40,11 +41,11 @@ tags:
 
 Получите знак отличия вашей фракции. Все новые члены фракции получают знак отличия своей фракции, выполненный в пригодном для ношения на одежде или руках предмете.
 
-**Арфисты** \- Булавка  
+**Арфисты** - Булавка  
 **Орден Латной Рукавицы** - Кулон  
 **Изумрудный Анклав** - Застежка в виде листка  
 **Альянс Лордов** - Кольцо-печатка (символ со стороны ладони)  
-**Зентарим** \- Золотая монета (с вытисненным символом)
+**Зентарим** - Золотая монета (с вытисненным символом)
 
 ## **РАНГ 2. АГЕНТ**
 
