--- a/src/content/posts/forgotten-realms/order-of-the-gauntlet.mdx
+++ b/src/content/posts/forgotten-realms/order-of-the-gauntlet.mdx
@@ -60,7 +60,28 @@ tags:
 
 Зерн Ксерскил
 
-<table class="wp-block-table"><tbody><tr><td>Модуль</td><td>Уровень персонажа</td><td>Ссылка на DMsGuild</td></tr><tr><td>DDEX1-12 Raiders of the Twilight Marsh</td><td>T2: 5-10</td><td>&nbsp;</td></tr><tr><td>DDEX2-15 Black Heart of Vengeance</td><td>T2: 5-10</td><td>&nbsp;</td></tr><tr><td>DDEX3-9 The Waydown</td><td>T2: 5-10</td><td>&nbsp;</td></tr><tr><td>DDEX3-15 Szith Morcane Unbound</td><td>T2: 5-10</td><td>&nbsp;</td></tr><tr><td>DDEX3-16 Assault on Maermydra</td><td>T3: 11-16</td><td>&nbsp;</td></tr><tr><td>DDAL4-14 The Darklord</td><td>T2: 5-10</td><td>&nbsp;</td></tr><tr><td>DDAL5-15 Reclamation</td><td>T3: 11-16</td><td>&nbsp;</td></tr><tr><td>DDAL5-17 Hartkiller's Horn</td><td>T2: 5-10</td><td>&nbsp;</td></tr><tr><td>DDAL5-18 The Mysterious Isle</td><td>T4: 17-20</td><td>&nbsp;</td></tr><tr><td>DDAL5-19 Eye of Xxiphu</td><td>T4: 17-20</td><td>&nbsp;</td></tr><tr><td>DDAL06-00-04 Tales From The Yawning Portal (Hardcover) - White Plume Mountain</td><td>T2: 5-10 (L8)</td></tr><tr><td>DDAL06-01 + Forge of Fury&nbsp;(DM Quest Player's Reward)</td><td>mixed</td><td>TFTYP06-01</td></tr><tr><td>DDAL06-02 + White Plume Mountain&nbsp;(DM Quest Player's Reward)</td><td>mixed</td><td>TFTYP06-02</td></tr><tr><td>DDAL06-03 + Against the Giants&nbsp;(DM Quest Player's Reward)</td><td>mixed</td><td>TFTYP06-03</td></tr><tr><td>DDAL07-08 Putting the Dead to Rest</td><td>T2: 5-10</td><td>&nbsp;</td></tr><tr><td>DDAL07-11 A Lesson in Love</td><td>T3: 11-16</td><td>&nbsp;</td></tr></tbody></table>
+
+|Модуль|Уровень персонажа|Ссылка на DMsGuild|Ссылка на Dungeons.ru|
+|:--|:--:|:--|---|
+|DDEX1-12 Raiders of the Twilight Marsh |	T2: 5-10 |	 
+|DDEX2-15 Black Heart of Vengeance	|T2: 5-10	 
+|DDEX3-9 The Waydown |	T2: 5-10	 
+|DDEX3-15 Szith Morcane Unbound |	T2: 5-10	 
+|DDEX3-16 Assault on Maermydra	| T3: 11-16	 
+|DDAL4-14 The Darklord |	T2: 5-10	 
+|DDAL5-15 Reclamation	| T3: 11-16	 
+|DDAL5-17 Hartkiller's Horn	| T2: 5-10	 
+|DDAL5-18 The Mysterious Isle |	T4: 17-20	 
+|DDAL5-19 Eye of Xxiphu |	T4: 17-20	 
+|DDAL06-00-04 Tales From The Yawning Portal (Hardcover) - White Plume Mountain |	T2: 5-10 (L8)
+|DDAL06-01 + Forge of Fury (DM Quest Player's Reward) |	mixed
+|	TFTYP06-01 |   |
+|DDAL06-02 + White Plume Mountain (DM Quest Player's Reward) |	mixed	
+|TFTYP06-02 |
+|DDAL06-03 + Against the Giants (DM Quest Player's Reward)	| mixed	
+|TFTYP06-03 |
+|DDAL07-08 Putting the Dead to Rest	|T2: 5-10 |	 
+|DDAL07-11 A Lesson in Love	| T3: 11-16 |
 
 * * *
 
