--- a/src/content/posts/articles/timeline-5e.mdx
+++ b/src/content/posts/articles/timeline-5e.mdx
@@ -5,6 +5,7 @@ date: '2019-05-10'
 tags:
   - Forgotten Realms
   - 5E
+  - "forgottenrealms"
 ---
 
 — 1357 ЛД: ⚠Первая «Серая Коробка», «Забытые Королевства». Первая редакция D&D.
