--- a/src/content/posts/articles/timeline-5e.mdx
+++ b/src/content/posts/articles/timeline-5e.mdx
@@ -6,6 +6,7 @@ tags:
   - Forgotten Realms
   - 5E
   - "forgottenrealms"
+  - "Забытые Королевства"
 ---
 
 — 1357 ЛД: ⚠Первая «Серая Коробка», «Забытые Королевства». Первая редакция D&D.
